<resources>
	<string name="app_name">Trivia Game</string>
	<string name="current_score_text">Current score: %d</string>
	<string name="question_label_text">Question %d out of %d</string>
	<string name="dummy_question">Lake Titicaca is located between which two nations?</string>
	<string name="question_prompt">What is your answer?</string>
	<string name="dummy_answer_a">Peru and Bolivia</string>
	<string name="dummy_answer_b">Kenya and Uganda</string>
	<string name="dummy_answer_c">Mexico and the United States</string>
	<string name="dummy_answer_d">India and Bangladesh</string>
	<string name="correct_answer_msg">Correct answer!</string>
	<string name="wrong_answer_msg">Wrong answer!</string>
	<string name="loading_msg">Loading the trivia questions…</string>
	<string name="cannot_load_msg">Couldn\'t load. Try again.</string>
	<string name="quit_game_prompt">Are you sure you want to quit the game?</string>
	<string name="yes_button">YES</string>
	<string name="no_button">NO</string>
	<string name="category_label_text">Select Category:</string>
	<string name="difficulty_label_text">Select Difficulty:</string>
	<string name="type_label_text">Select Type:</string>
	<string name="start_game_button">Start game</string>
	<string name="true_answer_text">True</string>
	<string name="false_answer_text">False</string>
	<string name="number_of_questions_label_text">Number of questions: %d</string>
	<string name="title_label_tet">Trivia\nGame</string>
	<string name="play_button_text">Play</string>
	<string name="statistics_button_text">Statistics</string>
	<string name="settings_button_text">Settings</string>
	<string name="quit_button_text">Quit</string>
	<string name="endgame_label_text">Endgame!</string>
	<string name="result_label_text">You\'ve answered %d questions\ncorrectly out of %d</string>
	<string name="retry_button_text">Retry</string>
	<string name="back_to_menu_button_text">Back to menu</string>
	<string name="most_played_category_label_text">Most played category: %s</string>
	<string name="average_correct_answers_label_text">Average correct answers: %.2f%%</string>
	<string name="average_score_label_text">Average score: %.2f</string>
	<string name="average_answer_time_label_text">Average answer time: %.2fs</string>
	<string-array name="category_array">
		<item>Any Category</item>
		<item>General Knowledge</item>
		<item>Entertainment: Books</item>
		<item>Entertainment: Film</item>
		<item>Entertainment: Music</item>
		<item>Entertainment: Musicals &amp; Theatres</item>
		<item>Entertainment: Television</item>
		<item>Entertainment: Video Games</item>
		<item>Entertainment: Board Games</item>
		<item>Science &amp; Nature</item>
		<item>Science: Computers</item>
		<item>Science: Mathematics</item>
		<item>Mythology</item>
		<item>Sports</item>
		<item>Geography</item>
		<item>History</item>
		<item>Politics</item>
		<item>Art</item>
		<item>Celebrities</item>
		<item>Animals</item>
		<item>Vehicles</item>
		<item>Entertainment: Comics</item>
		<item>Science: Gadgets</item>
		<item>Entertainment: Japanese Anime &amp; Manga</item>
		<item>Entertainment: Cartoon &amp; Animations</item>
	</string-array>
	<string-array name="difficulty_array">
		<item>Any Difficulty</item>
		<item>Easy</item>
		<item>Medium</item>
		<item>Hard</item>
	</string-array>
	<string-array name="type_array">
		<item>Any Type</item>
		<item>Multiple Choice</item>
		<item>True / False</item>
	</string-array>
</resources>