<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:clickable="true"
	tools:context=".QuestionFragment" >

	<androidx.cardview.widget.CardView
		android:id="@+id/score_card"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="4dp"
		app:cardBackgroundColor="@color/white"
		app:cardCornerRadius="5dp"
		app:cardElevation="4dp"
		app:contentPadding="5dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:id="@+id/score_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/current_score_text"
			tools:text="Current score: 0"/>
	</androidx.cardview.widget.CardView>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/score_card">

		<androidx.cardview.widget.CardView
			android:id="@+id/question_card"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="4dp"
			app:cardBackgroundColor="@color/white"
			app:cardCornerRadius="5dp"
			app:cardElevation="4dp"
			app:contentPadding="5dp"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="3dp">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/question_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/question_label_text"
					tools:text="Question 1"
					android:textAllCaps="true"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/question_content_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="32dp"
					android:layout_marginBottom="32dp"
					tools:text="@string/dummy_question"
					android:textAlignment="center"
					android:textAllCaps="false"
					android:textSize="24sp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/question_label" />
			</androidx.constraintlayout.widget.ConstraintLayout>
		</androidx.cardview.widget.CardView>

		<TextView
			android:id="@+id/prompt_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="44dp"
			android:text="@string/question_prompt"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/question_card" />

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/prompt_label">

			<androidx.cardview.widget.CardView
				android:id="@+id/answer_true_card"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:clickable="true"
				android:foreground="?android:selectableItemBackground"
				app:cardBackgroundColor="@color/white"
				app:cardCornerRadius="5dp"
				app:cardElevation="4dp"
				app:contentPaddingBottom="10dp"
				app:contentPaddingLeft="5dp"
				app:contentPaddingRight="5dp"
				app:contentPaddingTop="10dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:visibility="gone">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/answer_true_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/true_answer_text"
						android:textSize="20sp"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
				</androidx.constraintlayout.widget.ConstraintLayout>
			</androidx.cardview.widget.CardView>

			<androidx.cardview.widget.CardView
				android:id="@+id/answer_false_card"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="4dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="4dp"
				android:clickable="true"
				android:foreground="?android:selectableItemBackground"
				app:cardBackgroundColor="@color/white"
				app:cardCornerRadius="5dp"
				app:cardElevation="4dp"
				app:contentPaddingBottom="10dp"
				app:contentPaddingLeft="5dp"
				app:contentPaddingRight="5dp"
				app:contentPaddingTop="10dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/answer_true_card"
				tools:visibility="gone">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/answer_false_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/false_answer_text"
						android:textSize="20sp"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
				</androidx.constraintlayout.widget.ConstraintLayout>
			</androidx.cardview.widget.CardView>

			<android.widget.Space
				android:id="@+id/answer_false_card_space"
				android:layout_width="match_parent"
				android:layout_height="10dp"
				app:layout_constraintTop_toBottomOf="@+id/answer_false_card"
				tools:visibility="gone" />

			<androidx.cardview.widget.CardView
				android:id="@+id/answer_a_card"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:clickable="true"
				android:foreground="?android:selectableItemBackground"
				app:cardBackgroundColor="@color/white"
				app:cardCornerRadius="5dp"
				app:cardElevation="4dp"
				app:contentPaddingBottom="10dp"
				app:contentPaddingLeft="5dp"
				app:contentPaddingRight="5dp"
				app:contentPaddingTop="10dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/answer_a_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						tools:text="@string/dummy_answer_a"
						android:textSize="20sp"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
				</androidx.constraintlayout.widget.ConstraintLayout>
			</androidx.cardview.widget.CardView>

			<androidx.cardview.widget.CardView
				android:id="@+id/answer_b_card"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="4dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="4dp"
				android:layout_marginBottom="4dp"
				android:clickable="true"
				android:foreground="?android:selectableItemBackground"
				app:cardBackgroundColor="@color/white"
				app:cardCornerRadius="5dp"
				app:cardElevation="4dp"
				app:contentPaddingBottom="10dp"
				app:contentPaddingLeft="5dp"
				app:contentPaddingRight="5dp"
				app:contentPaddingTop="10dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/answer_a_card">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/answer_b_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						tools:text="@string/dummy_answer_b"
						android:textSize="20sp"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
				</androidx.constraintlayout.widget.ConstraintLayout>
			</androidx.cardview.widget.CardView>

			<androidx.cardview.widget.CardView
				android:id="@+id/answer_c_card"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="4dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="4dp"
				android:layout_marginBottom="4dp"
				android:clickable="true"
				android:foreground="?android:selectableItemBackground"
				app:cardBackgroundColor="@color/white"
				app:cardCornerRadius="5dp"
				app:cardElevation="4dp"
				app:contentPaddingBottom="10dp"
				app:contentPaddingLeft="5dp"
				app:contentPaddingRight="5dp"
				app:contentPaddingTop="10dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/answer_b_card">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/answer_c_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						tools:text="@string/dummy_answer_c"
						android:textSize="20sp"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
				</androidx.constraintlayout.widget.ConstraintLayout>
			</androidx.cardview.widget.CardView>

			<androidx.cardview.widget.CardView
				android:id="@+id/answer_d_card"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="4dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="4dp"
				android:clickable="true"
				android:foreground="?android:selectableItemBackground"
				app:cardBackgroundColor="@color/white"
				app:cardCornerRadius="5dp"
				app:cardElevation="4dp"
				app:contentPaddingBottom="10dp"
				app:contentPaddingLeft="5dp"
				app:contentPaddingRight="5dp"
				app:contentPaddingTop="10dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/answer_c_card">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/answer_d_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						tools:text="@string/dummy_answer_d"
						android:textSize="20sp"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
				</androidx.constraintlayout.widget.ConstraintLayout>
			</androidx.cardview.widget.CardView>

			<android.widget.Space
				android:id="@+id/answer_d_card_space"
				android:layout_width="match_parent"
				android:layout_height="10dp"
				app:layout_constraintTop_toBottomOf="@+id/answer_d_card" />
		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>